0.6.4.2
Support WebClientPort in Get-Tests / Run-Tests (Issue #617)
Support ReplaceDependencies on functions when publishing apps to containers with custom BaseApp

0.6.4.1
Add parameter finalizeDatabasesScriptBlock to New-BcContainer

Cleanup help for functions
Add more debugging info to Get-/Run-Tests when using -DebugMode
New function Restore-DatabasesInBcContainer
Cannot find txt2al in latest 15.x container
Add parameter doNotUseRuntimePackages to New-BcContainer
Ignore empty runtime packages when caching runtime test apps
Add credential parameter to Create-AlProjectFolderFromBcContainer
Add support for relative bakfolders in Backup/Restore
Add parameter bakFolder to New-BcContainer to store and reuse database
Rename application runtime cache to sandbox-applications or onprem-applications based on style
Add parameter -ignoreGroups to Get-TestsFromBcContainer to allow compatible output with 15.x containers (where groups are not supported)
New function Flush-ContainerHelperCache to cleanup caches used by ContainerHelperCache

0.6.3.4
Bugfix #570: Get-NavContainerAppInfo can return one app multiple times
PR #592: Catch errors from PTE CodeCop 
Add caching of runtime packages to Import-TestToolkitToBcContainer (or -IncludeTestToolkit) to allow faster subsequent starts of the same version
Add DebugMode to run- and get-tests to increase information dump if things fail
Fix regression - GetNavContainerAppInfo doesnt sort correctly

0.6.3.3
Import-TestToolkit to use local apps when using local sandbox builds

0.6.3.2
Bugfix: Compile-AppInBcContainer sometimes cannot use the downloaded symbols due to a timing issue
Issue #577: Create source files cache folder even if empty
Include C:\Applications.Country (if exists) during extract from container
Include C:\Test Assemblies\Mock Assemblies in probing path when importing test toolkit
Support importing test apps from C:\Application in 15.x containers
Bugfix #585: Ignore warning messages in Get-NavContainerAppInfo

0.6.3.1