@@ -1,6 +1,7 @@
 0.6.4.2
 Support WebClientPort in Get-Tests / Run-Tests (Issue #617)
 Support ReplaceDependencies on functions when publishing apps to containers with custom BaseApp
+Issue #616 add PreserveFormatting
 
 0.6.4.1
 Add parameter finalizeDatabasesScriptBlock to New-BcContainer
